--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@photostructure/tz-lookup": "^11.4.0",
     "cesium": "^1.138.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
