--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "resium": "^1.19.3",
+    "suncalc": "^1.9.0",
     "vite-plugin-cesium": "^1.2.23"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/suncalc": "^1.9.2",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
